# steganography

./: .gitignore  INSTALL.md  README.md
dissimulation/: MANIFEST.MF  build.sh  dissimulate
dissimulation/C/: CMakeLists.txt  main  main.c
dissimulation/C/resource/: text.txt
dissimulation/Java/: .gitignore
dissimulation/Java/resources/: byte.txt  file.txt
dissimulation/Java/src/: build.sh
dissimulation/Java/src/kgms/: Application.java  Channel.java  Dissimulate.java  ImageFormat.java  Stegano.java
dissimulation/Java/test/kgms/: SteganoTest.java
prototype/c/: CMakeCache.txt.old  CMakeLists.txt  Prototypes.md  README.md  config.cfg
prototype/c/resources/: byte.txt
prototype/c/src/: byte.c  cut.c  cvPyrDown.c  encode.c  filterC.c  get_binary_data.c  infoImage.c  main.c  nb.c  negative.c  resize.c  rgb.c  rotating.c  smoothing.c  stagno.c  ycrcb.c
prototype/java/src/FileToByte/: FileByteStream.java
prototype/java/src/Stegano/: Stegano.java
revelation/: CMakeLists.txt  Readme.md  bash.sh  build.sh  reveal
revelation/includes/: arguments.h  binary.h  decompress.h  decompress_more.h  direct_reveal.h  externalSpiral.h  image.h  internalSpiral.h  log.h  parser.h  reveal.h  reverse_reveal.h  validator_argument.h
revelation/resource/TEST/: msg.txt
revelation/resource/TEST/direct/: direct_Gray_3.pgm
revelation/resource/TEST/raw/: scan.py
revelation/resource/TEST/test_minunit/: test1.txt  test2.txt  test3.txt
revelation/resource/output/: log.txt  msg.txt
revelation/scripts/: build_test.sh  run_v1.sh  run_v2.sh  run_v3.sh  test_direct.sh  test_reverse.sh  test_spiral_external.sh  test_spiral_internal.sh
revelation/src/: main.c
revelation/src/decompress/: decompress.c  decompress_more.c
revelation/src/reveal/: reveal.c
revelation/src/util/: Image.c  binary.c  checks.c  log.c  parser.c  valitador_argument.c
revelation/tests/: CMakeLists.txt
revelation/tests/includes/: minunit_arguments.h  minunit_binary.h  minunit_decompress.h  minunit_parser.h  minunit_reveal.h
revelation/tests/src/: minunit_arguments.c  minunit_binary.c  minunit_decompress.c  minunit_parser.c  minunit_reveal.c  test_parser.sh
(+67 files in other folders)
